[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Retro Gaming.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Tutorial/Character.gd" type="Script" id=2]
[ext_resource path="res://assets/Character/Background.png" type="Texture" id=4]
[ext_resource path="res://assets/Character/Bia.png" type="Texture" id=5]
[ext_resource path="res://assets/Character/Gabriel.png" type="Texture" id=6]
[ext_resource path="res://assets/Character/Box.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[node name="Character" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 641, 362 )
texture = ExtResource( 4 )

[node name="Box" type="Sprite" parent="."]
position = Vector2( 640, 365 )
texture = ExtResource( 7 )

[node name="Bia" type="Button" parent="."]
margin_left = 143.0
margin_top = 164.0
margin_right = 566.0
margin_bottom = 629.0
icon = ExtResource( 5 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Gabriel" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 700.0
margin_top = 160.0
margin_right = 1124.0
margin_bottom = 625.0
icon = ExtResource( 6 )
flat = true
expand_icon = true

[node name="Title" type="Label" parent="." groups=["TutorialText"]]
margin_left = 369.0
margin_top = 60.0
margin_right = 913.0
margin_bottom = 142.0
custom_fonts/font = SubResource( 1 )
text = "Personagens"

[connection signal="mouse_entered" from="Bia" to="." method="_on_Bia_mouse_entered"]
[connection signal="mouse_exited" from="Bia" to="." method="_on_Bia_mouse_exited"]
[connection signal="pressed" from="Bia" to="." method="_on_Bia_pressed"]
[connection signal="mouse_entered" from="Gabriel" to="." method="_on_Gabriel_mouse_entered"]
[connection signal="mouse_exited" from="Gabriel" to="." method="_on_Gabriel_mouse_exited"]
[connection signal="pressed" from="Gabriel" to="." method="_on_Gabriel_pressed"]
